2008-04-09  Suman Manjunath  <msuman@novell.com>

	* calendar/e-cal-backend-exchange.c: (open_calendar):
	Set account mode to 'ONLINE_MODE' before attempting to connect.

2008-04-01  Matthew Barnes  <mbarnes@redhat.com>

	* configure.in: Version bump for 2.23.1.

2008-03-27  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #303067

	* addressbook/e-book-backend-gal.c:
	Guard access to priv->ldap with its mutex.
	Also do not use local copy of priv->ldap when reconnect can change it.

2008-03-17  Bharath Acharya  <abharath@novell.com>

	** Fix for bug #520676

	* camel/camel-exchange-store.c (make_folder_info): store the Folder type
	flags for Sent items and Trash folder
	* camel/camel-stub-constants.h:
	* mail/mail-stub-exchange.c (get_folder_info): Get the physical uris 
	for Sent items and Trash folders
	(stub_connect): 
	* mail/mail-stub-exchange.h: Introduced a new item sent_items in 
	MailStubExchange structure.

2008-03-14  Suman Manjunath  <msuman@novell.com>

	** Fix for bug #268259 (bugzilla.novell.com)

	* calendar/e-cal-backend-exchange.c: (open_calendar): Don't require
	restart of Evolution to create appointment on switching from offline
	to online mode. 

2008-03-10  Srinivasa Ragavan  <sragavan@novell.com>

	* NEWS, configure.in: Evolution Exchange 2.22.0 release

2008-02-25  Srinivasa Ragavan  <sragavan@novell.com>

	* NEWS: Evolution Exchange 2.21.92 release.

2008-02-25  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #518569

	* addressbook/e-book-backend-gal.c: (member_populate):
	Properly format name and address with "<>" characters.

2008-02-25  Chenthill Palanisamy  <pchenthill@novell.com>

	* calendar/e-cal-backend-exchange-calendar.c: (receive_objects):
	* calendar/e-cal-backend-exchange-tasks.c: (receive_task_objects): Free
	the memory returned by e_cal_component_get_recurid_as_string.									   

2008-02-25  Chenthill Palanisamy  <pchenthill@novell.com>

	* configure.in: set HANDLE_LIBICAL_MEMORY to 1.
